--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
-  "name": "final_project_341",
+  "name": "workouts_backend_project",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "start-dev": "nodemon node serv.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "swagger-autogen": "node ./swagger.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UchechiUcheAjike/CSE-341-Final-Project"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.20",
-    "swagger-autogen": "^2.23.1"
+  "bugs": {
+    "url": "https://github.com/UchechiUcheAjike/CSE-341-Final-Project/issues"
   },
+  "homepage": "https://github.com/UchechiUcheAjike/CSE-341-Final-Project#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.18.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.12.0",
-    "mongodb": "^5.1.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^7.0.0",
     "swagger-ui-express": "^4.6.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.5.1",
+    "swagger-autogen": "^2.23.1"
   }
 }
