--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/UchechiUcheAjike/CSE-341-Final-Project#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -33,7 +34,7 @@
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "swagger-ui-express": "^4.6.0",
+    "swagger-ui-express": "^4.6.2",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
