--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
+    "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
@@ -29,6 +29,7 @@
     "express-openid-connect": "^2.12.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
+    "jest": "^29.5.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
